fix color-contrast style, make sure hint does not use router

--- a/styles.css
+++ b/styles.css
@@ -264,6 +264,7 @@
   --color-ui-2: var(--color-ui-2);
   --color-ui-3: var(--color-ui-3);
   --color-ui-4: var(--color-ui-4);
+  --color-ui-contrast: var(--color-ui-contrast);
 
   /* Animations */
   --animate-fade-in: var(--animation-fade-in);
@@ -547,7 +548,7 @@
     --color-ui-2: var(--yellow-3);
     --color-ui-3: var(--violet-6);
     --color-ui-4: var(--orange-6);
-    --color-ui-5: var(--pink-7);
+    --color-ui-contrast: var(--pink-7);
   }
 }
 
@@ -570,7 +571,7 @@
     --color-ui-2: var(--orange-5);
     --color-ui-3: var(--purple-5);
     --color-ui-4: var(--choco-9);
-    --color-ui-5: var(--pink-4);
+    --color-ui-contrast: var(--pink-4);
   }
 }
 
